qa: temp changes to test copy of cbt results
Signed-off-by: Neha Ojha <nojha@redhat.com>

--- a/qa/suites/perf-basic/workloads/radosbench_4K_write.yaml
+++ b/qa/suites/perf-basic/workloads/radosbench_4K_write.yaml
@@ -5,6 +5,8 @@ meta:
 
 tasks:
 - cbt:
+    repo: https://github.com/neha-ojha/cbt.git
+    branch: wip-fix-cbt-task
     benchmarks:
       radosbench:
         concurrent_ops: 4
